--- a/trunk/LiveTracker/AndroidManifest.xml
+++ b/trunk/LiveTracker/AndroidManifest.xml
@@ -19,8 +19,7 @@
 -->
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
       package="de.avanux.android.andtracker"
-      android:versionCode="101"
-      android:versionName="1.0">
+      android:versionCode="102" android:versionName="1.0.2">
     <application android:icon="@drawable/icon" android:label="@string/app_name">
         <activity android:name=".LiveTracker"
                   android:label="@string/app_name">
