--- a/trunk/LiveTracker/AndroidManifest.xml
+++ b/trunk/LiveTracker/AndroidManifest.xml
@@ -18,7 +18,7 @@
  along with LiveTracker.  If not, see <http://www.gnu.org/licenses/>.
 -->
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-      package="de.avanux.android.andtracker"
+      package="de.avanux.android.livetracker2"
       android:versionCode="104" android:versionName="1.0.4">
     <application android:icon="@drawable/icon" android:label="@string/app_name">
         <activity android:name=".LiveTracker"
