--- a/trunk/LiveTracker/AndroidManifest.xml
+++ b/trunk/LiveTracker/AndroidManifest.xml
@@ -34,8 +34,9 @@
         <activity android:name=".InviteContactsByEmailActivity"></activity>
         <service android:name="LocationTracker"></service>
     </application>
-    <uses-sdk android:minSdkVersion="3" />
+    <uses-sdk android:minSdkVersion="3" android:targetSdkVersion="4"/>
     <uses-permission android:name="android.permission.INTERNET"></uses-permission>
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"></uses-permission>
     <uses-permission android:name="android.permission.READ_CONTACTS"/>
+    <supports-screens/> 
 </manifest> 
