--- a/LiveTracker/AndroidManifest.xml
+++ b/LiveTracker/AndroidManifest.xml
@@ -22,7 +22,9 @@
       android:versionCode="105" android:versionName="1.0.5">
     <application android:icon="@drawable/icon" android:label="@string/app_name">
         <activity android:name=".LiveTracker"
-                  android:label="@string/app_name">
+                  android:label="@string/app_name"
+                  android:screenOrientation="portrait"
+                  >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
